--- a/javacc/src/main/resources/templates/Token.template
+++ b/javacc/src/main/resources/templates/Token.template
@@ -6,48 +6,16 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class Token extends ${TOKEN_EXTENDS} 
 #else
 ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class Token implements java.io.Serializable {
 #fi
-  /**
-   * The version identifier for this Serializable class.
-   * Increment only if the <i>serialized</i> form of the
-   * class changes.
-   */
-  private static final long serialVersionUID = 1L;
-
-  /**
-   * An integer that describes the kind of this token.  This numbering
-   * system is determined by JavaCCParser, and a table of these numbers is
-   * stored in the file ...Constants.java.
-   */
-  public int kind;
-
-  /** Index of the first token character, inclusive. */
-  public int beginOffset;
-
-  /**
-   * Index of the last token character, exclusive.
-   * If <code>beginOffset == endOffset</code> then the token
-   * is is empty.
-   */
-  public int endOffset;
+  private int kind;
+  private int beginOffset;
+  private int endOffset;
 #if KEEP_LINE_COLUMN
-
-  /** The line number of the first character of this Token. */
-  public int beginLine;
-
-  /** The column number of the first character of this Token. */
-  public int beginColumn;
-
-  /** The line number of the last character of this Token. */
-  public int endLine;
-
-  /** The column number of the last character of this Token. */
-  public int endColumn;
+  private int beginLine;
+  private int beginColumn;
+  private int endLine;
+  private int endColumn;
 #fi
-
-  /**
-   * The string image of the token.
-   */
-  public String image;
+  private String image;
 
   /**
    * A reference to the next regular (non-special) token from the input
@@ -73,41 +41,118 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class Token implements java.io.Serial
    */
   public Token specialToken;
 
-  /**
-   * An optional attribute value of the Token.
-   * Tokens which are not used as syntactic sugar will often contain
-   * meaningful values that will be used later on by the compiler or
-   * interpreter. This attribute value is often different from the image.
-   * Any subclass of Token that actually wants to return a non-null value can
-   * override this method as appropriate.
-   */
-  public Object getValue() {
-    return null;
-  }
-
-  /**
-   * No-argument constructor
-   */
+  /** No-argument contructor */
   public Token() {}
 
-  /**
-   * Constructs a new token for the specified Image.
-   */
+  /** Constructs a new token for the specified Image. */
   public Token(int kind) {
     this(kind, null);
   }
 
-  /**
-   * Constructs a new token for the specified Image and Kind.
-   */
+  /** Constructs a new token for the specified Image and Kind. */
   public Token(int kind, String image) {
     this.kind = kind;
     this.image = image;
   }
 
   /**
-   * Returns the image.
+   * Gets an integer that describes the kind of this token.
+   *
+   * This numbering system is determined by JavaCCParser, and a table of these numbers is
+   * stored in the file ...Constants.java.
+   *
+   * @return Token kind.
    */
+  public int getKind() {
+    return kind;
+  }
+
+  /**
+   * Change token kind.
+   *
+   * @param kind New token kind.
+   */
+  public void setKind(final int kind) {
+    this.kind = kind;
+  }
+
+  /**
+   * Gets text matched by this token.
+   *
+   * @return Token image.
+   */
+  public String getImage() {
+    return image;
+  }
+
+  /**
+   * Change token image.
+   *
+   * @param image New token image.
+   */
+  public void setImage(final String image) {
+    this.image = image;
+  }
+
+  /** @return Index of the first character of the token, inclusive. */
+  public int getBeginOffset() {
+    return beginOffset;
+  }
+
+  /** @return Index of the last character of the token, exclusive. */
+  public int getEndOffset() {
+    return endOffset;
+  }
+
+  /**
+   * Set index of first and last token character.
+   *
+   * @param begin Index of the first character of the token, inclusive.
+   * @param end   Index of the last character of the token, exclusive.
+   */
+  public void setOffset(int begin, int end) {
+    beginOffset = begin;
+    endOffset = end;
+  }
+#if KEEP_LINE_COLUMN
+
+  /** @return The line number of the first character of this token. */
+  public int getBeginLine() {
+    return beginLine;
+  }
+
+  /** @return The column number of the first character of this token. */
+  public int getBeginColumn() {
+    return beginColumn;
+  }
+
+  /** @return The line number of the last character of this token. */
+  public int getEndLine() {
+    return endLine;
+  }
+
+  /** @return The column number of the last character of this token. */
+  public int getEndColumn() {
+    return endColumn;
+  }
+
+  /**
+   * Set token line and column numbers.
+   *
+   * @param beginLine   The line number of the first character of this token
+   * @param beginColumn The column number of the first character of this token.
+   * @param endLine     The line number of the last character of this token.
+   * @param endColumn   The column number of the last character of this token.
+   */
+  public void setLineColumn(int beginLine, int beginColumn, int endLine, int endColumn) {
+    this.beginLine = beginLine;
+    this.beginColumn = beginColumn;
+    this.endLine = endLine;
+    this.endColumn = endColumn;
+  }
+#fi
+
+  /** Returns the image. */
   public String toString() {
     return image;
   }
@@ -119,10 +164,14 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class Token implements java.io.Serial
    * For example, if you have a subclass of Token called IDToken that
    * you want to create if ofKind is ID, simply add something like :
    *
-   *    case MyParserConstants.ID : return new IDToken(ofKind, image);
+   * case MyParserConstants.ID : return new IDToken(ofKind, image);
    *
    * to the following switch statement. Then you can cast matchedToken
-   * variable to the appropriate type and use sit in your lexical actions.
+   * variable to the appropriate type and use it in your lexical actions.
+   *
+   * @param ofKind Token kind.
+   * @param image  Token image.
+   * @return New token instance.
    */
   public static Token newToken(int ofKind, String image) {
     switch(ofKind) {
