--- a/javacc/src/main/resources/templates/ParseException.template
+++ b/javacc/src/main/resources/templates/ParseException.template
@@ -8,34 +8,14 @@
  * mechanisms so long as you retain the public fields.
  */
 public class ParseException extends Exception {
-  /**
-   * The version identifier for this Serializable class.
-   * Increment only if the <i>serialized</i> form of the
-   * class changes.
-   */
-  private static final long serialVersionUID = 1L;
-
-  /**
-   * The following constructors are for use by you for whatever
-   * purpose you can think of.  Constructing the exception in this
-   * manner makes the exception behave in the normal way - i.e., as
-   * documented in the class "Throwable".  The fields "errorToken",
-   * "expectedTokenSequences", and "tokenImage" do not contain
-   * relevant information.  The JavaCC generated code does not use
-   * these constructors.
-   */
-  public ParseException() {
-    currentToken = null;
-    expectedTokenSequences = null;
-    tokenImage = null;
-  }
+  private final Token currentToken;
+  private final int[][] expectedTokenSequences;
 
   /** Constructor with message. */
-  public ParseException(String message) {
+  public ParseException(final String message) {
     super(message);
     currentToken = null;
     expectedTokenSequences = null;
-    tokenImage = null;
   }
 
   /**
@@ -43,144 +23,96 @@ public class ParseException extends Exception {
    * in the generated parser.  Calling this constructor generates
    * a new object of this type with the fields "currentToken",
    * "expectedTokenSequences", and "tokenImage" set.
+   *
+   * @param currentToken           The last successfully consumed token.
+   * @param expectedTokenSequences What token kinds expected after
+   *                               the current token.
    */
-  public ParseException(Token currentTokenVal,
-                        int[][] expectedTokenSequencesVal,
-                        String[] tokenImageVal) {
-    super(initialise(currentTokenVal, expectedTokenSequencesVal, tokenImageVal));
-    currentToken = currentTokenVal;
-    expectedTokenSequences = expectedTokenSequencesVal;
-    tokenImage = tokenImageVal;
+  public ParseException(final Token currentToken,
+                        final int[][] expectedTokenSequences,
+                        final String[] tokenImage) {
+    super(generateMessage(currentToken, expectedTokenSequences, tokenImage));
+    this.currentToken = currentToken;
+    this.expectedTokenSequences = expectedTokenSequences;
   }
 
   /**
-   * This is the last token that has been consumed successfully.  If
+   * Get the last token that has been consumed successfully.  If
    * this object has been created due to a parse error, the token
    * following this token will (therefore) be the first error token.
+   *
+   * @return The last successfully consumed token.
    */
-  public final Token currentToken;
-
-  /**
-   * Each entry in this array is an array of integers.  Each array
-   * of integers represents a sequence of tokens (by their ordinal
-   * values) that is expected at this point of the parse.
-   */
-  public final int[][] expectedTokenSequences;
-
-  /**
-   * This is a reference to the "tokenImage" array of the generated
-   * parser within which the parse error occurred.  This array is
-   * defined in the generated ...Constants interface.
-   */
-  public final String[] tokenImage;
-
-  /**
-   * It uses "currentToken" and "expectedTokenSequences" to generate a parse
-   * error message and returns it.  If this object has been created
-   * due to a parse error, and you do not catch it (it gets thrown
-   * from the parser) the correct error message
-   * gets displayed.
-   */
-  private static String initialise(Token currentToken,
-                                   int[][] expectedTokenSequences,
-                                   String[] tokenImage) {
-    String eol = System.getProperty("line.separator", "\n");
-    StringBuffer expected = new StringBuffer();
-    int maxSize = 0;
-    for (int i = 0; i < expectedTokenSequences.length; i++) {
-      if (maxSize < expectedTokenSequences[i].length) {
-        maxSize = expectedTokenSequences[i].length;
-      }
-      for (int j = 0; j < expectedTokenSequences[i].length; j++) {
-        expected.append(tokenImage[expectedTokenSequences[i][j]]).append(' ');
-      }
-      if (expectedTokenSequences[i][expectedTokenSequences[i].length - 1] != 0) {
-        expected.append("...");
-      }
-      expected.append(eol).append("    ");
-    }
-    String s = "Encountered \"";
-    Token t = currentToken.next;
-    for (int i = 0; i < maxSize; i++) {
-      if (i != 0) {
-        s += " ";
-      }
-      if (t.getKind() == 0) {
-        s += tokenImage[0];
-        break;
-      }
-      s += " " + tokenImage[t.getKind()];
-      s += " \"";
-      s += escape(t.getImage());
-      s += " \"";
-      t = t.next;
-    }
-#if KEEP_LINE_COLUMN
-    s += "\" at line " + currentToken.next.getBeginLine() + ", column " + currentToken.next.getBeginColumn();
-#fi
-    s += "." + eol;
-    if (expectedTokenSequences.length == 1) {
-      s += "Was expecting:" + eol + "    ";
-    }
-    else {
-      s += "Was expecting one of:" + eol + "    ";
-    }
-    s += expected.toString();
-    return s;
+  public Token getCurrentToken() {
+    return currentToken;
   }
 
   /**
-   * The end of line string for this machine.
+   * Each nested array of integers represents a sequence of tokens
+   * (by their ordinal values) that is expected at this point of the parse.
+   *
+   * @return What token kinds expected after the current successfully parsed token.
    */
-  private static final String eol = System.getProperty("line.separator", "\n");
+  public int[][] getExpectedTokenSequences() {
+    return expectedTokenSequences;
+  }
 
   /**
-   * Used to convert raw characters to their escaped version
-   * when these raw version cannot be used as part of an ASCII
-   * string literal.
+   * It uses {@link #currentToken} and {@link #expectedTokenSequences} to generate
+   * a parse error message.  If this object has been created due to a parse error,
+   * and you do not catch it (it gets thrown * from the parser) the correct
+   * error message gets displayed.
    */
-  static String escape(String str) {
-      final StringBuffer b = new StringBuffer();
-      char ch;
-      for (int i = 0; i < str.length(); i++) {
-        switch (str.charAt(i)) {
-           case 0 :
-              continue;
-           case '\b':
-              b.append("\\b");
-              continue;
-           case '\t':
-              b.append("\\t");
-              continue;
-           case '\n':
-              b.append("\\n");
-              continue;
-           case '\f':
-              b.append("\\f");
-              continue;
-           case '\r':
-              b.append("\\r");
-              continue;
-           case '\"':
-              b.append("\\\"");
-              continue;
-           case '\'':
-              b.append("\\\'");
-              continue;
-           case '\\':
-              b.append("\\\\");
-              continue;
-           default:
-              if ((ch = str.charAt(i)) < 0x20 || ch > 0x7e) {
-                 final String s = "0000" + Integer.toString(ch, 16);
-                 b.append("\\u" + s.substring(s.length() - 4, s.length()));
-              }
-              else {
-                 b.append(ch);
-              }
-              continue;
-        }
+  private static String generateMessage(final Token currentToken,
+                                        final int[][] expectedTokenSequences,
+                                        final String[] tokenImage) {
+    final StringBuilder s = new StringBuilder();
+    int max = 0;
+    for (int i = 0; i < expectedTokenSequences.length; i++) {
+      max = Math.max(max, expectedTokenSequences[i].length);
+    }
+    s.append("Encountered: ");
+    Token t = currentToken.next;
+    int n = 0;
+    while (t != null & n < max) {
+      if (n > 0) {
+        s.append(", ");
       }
-      return b.toString();
-   }
+      s.append(tokenImage[t.getKind()]);
+      if (t.getKind() == 0) {
+        break;
+      }
+      t = t.next;
+      n++;
+    }
+#if KEEP_LINE_COLUMN
+    s.append(" at line ")
+        .append(currentToken.next.getBeginLine())
+        .append(", column ").append(currentToken.next.getBeginColumn());
+#fi
+    s.append(".\n");
+    if (expectedTokenSequences.length == 1) {
+      s.append("Was expecting:\n");
+    }
+    else {
+      s.append("Was expecting one of:\n");
+    }
+    for (int i = 0; i < expectedTokenSequences.length; i++) {
+      final int length = expectedTokenSequences[i].length;
+      if (i > 0) {
+        s.append("\n");
+      }
+      s.append("   ");
+      for (int j = 0; j < length; j++) {
+        if (j > 0) {
+          s.append(", ");
+        }
+        s.append(tokenImage[expectedTokenSequences[i][j]]);
+      }
+      if (expectedTokenSequences[i][length - 1] != 0) {
+        s.append("...");
+      }
+    }
+    return s.toString();
+  }
 }
