--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   <packaging>pom</packaging>
   <modules>
     <module>javacc</module>
-    <module>javacc-tests</module>
-    <module>javacc-examples</module>
+    <!--<module>javacc-tests</module>-->
+    <!--<module>javacc-examples</module>-->
     <module>javacc-example-java</module>
     <!--<module>javacc-maven-plugin</module>-->
   </modules>
