Introduced new option KEEP_IMAGE
Since Token class now provides begin and end offset, it would be easy to reconstruct
original token image when needed. It may not always have sence to keep token image
in the token itself. The new options allows generating Token class without image field,
and token manager without the corresponding routines.

--- a/javacc/src/main/resources/templates/CharStream.template
+++ b/javacc/src/main/resources/templates/CharStream.template
@@ -39,6 +39,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.
    * token and it is the implemetation's responsibility to do this right.
    */
   void backup(int amount);
+#if KEEP_IMAGE
 
   /**
    * Returns a string made up of characters from the marked token beginning
@@ -57,6 +58,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface CharStream extends java.io.
    * </pre>
    */
   char[] getSuffix(int length);
+#fi
 
   /**
    * Returns index of the first character for current token (being
