--- a/javacc/src/main/resources/templates/JavaCharStream.template
+++ b/javacc/src/main/resources/templates/JavaCharStream.template
@@ -248,6 +248,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}final class JavaCharStream implements
     endOffset -= amount;
     offset -= amount;
   }
+#if KEEP_IMAGE
 
   public String getImage() {
     return new String(buffer, 0, offset);
@@ -258,6 +259,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}final class JavaCharStream implements
     System.arraycopy(buffer, length - l, ret, 0, l);
     return ret;
   }
+#fi
 #if KEEP_LINE_COLUMN
 
   private void updateLineColumn(int c) {
