--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -6,7 +6,6 @@ class SimpleNode extends ${NODE_EXTENDS} implements Node {
 #else
 class SimpleNode implements Node {
 #fi
-
   protected Node parent;
   protected Node[] children;
   protected int id;
@@ -36,19 +35,23 @@ class SimpleNode implements Node {
   }
 
 #fi
-  public void jjtOpen() {
+  public void jjtOpen() {}
+
+  public void jjtClose() {}
+
+  public void jjtSetParent(Node n) {
+    parent = n;
   }
 
-  public void jjtClose() {
+  public Node jjtGetParent() {
+    return parent;
   }
-
-  public void jjtSetParent(Node n) { parent = n; }
-  public Node jjtGetParent() { return parent; }
 
   public void jjtAddChild(Node n, int i) {
     if (children == null) {
       children = new Node[i + 1];
-    } else if (i >= children.length) {
+    }
+    else if (i >= children.length) {
       Node c[] = new Node[i + 1];
       System.arraycopy(children, 0, c, 0, children.length);
       children = c;
@@ -61,17 +64,33 @@ class SimpleNode implements Node {
   }
 
   public int jjtGetNumChildren() {
-    return (children == null) ? 0 : children.length;
+    return children == null ? 0 : children.length;
   }
 
-  public void jjtSetValue(Object value) { this.value = value; }
-  public Object jjtGetValue() { return value; }
+  public void jjtSetValue(Object value) {
+    this.value = value;
+  }
+
+  public Object jjtGetValue() {
+    return value;
+  }
 
 #if TRACK_TOKENS
-  public Token jjtGetFirstToken() { return firstToken; }
-  public void jjtSetFirstToken(Token token) { this.firstToken = token; }
-  public Token jjtGetLastToken() { return lastToken; }
-  public void jjtSetLastToken(Token token) { this.lastToken = token; }
+  public Token jjtGetFirstToken() {
+    return firstToken;
+  }
+
+  public void jjtSetFirstToken(Token token) {
+    this.firstToken = token;
+  }
+
+  public Token jjtGetLastToken() {
+    return lastToken;
+  }
+
+  public void jjtSetLastToken(Token token) {
+    this.lastToken = token;
+  }
 
 #fi
 #if VISITOR
@@ -110,11 +129,11 @@ class SimpleNode implements Node {
      you need to do. */
 
   public String toString() { return ${PARSER_NAME}TreeConstants.jjtNodeName[id]; }
+
   public String toString(String prefix) { return prefix + toString(); }
 
   /* Override this method if you want to customize how the node dumps
      out its children. */
-
   public void dump(String prefix) {
     System.out.println(toString(prefix));
     if (children != null) {
