Complex cleanup -- intermediate result, to amend later

--- a/javacc-examples/pom.xml
+++ b/javacc-examples/pom.xml
@@ -9,9 +9,17 @@
   </parent>
   <artifactId>javacc-examples</artifactId>
   <name>JavaCC Examples</name>
+  <packaging>pom</packaging>
   <description>
     JavaCC is a parser/scanner generator for Java.
   </description>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
@@ -37,12 +45,4 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.7</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
 </project>
