--- a/javacc/src/main/resources/templates/Node.template
+++ b/javacc/src/main/resources/templates/Node.template
@@ -10,42 +10,42 @@ interface Node {
    * This method is called after the node has been made the current
    * node.  It indicates that child nodes can now be added to it.
    */
-  public void jjtOpen();
+  void jjtOpen();
 
   /**
    * This method is called after all the child nodes have been added.
    */
-  public void jjtClose();
+  void jjtClose();
 
-  public void jjtSetParent(Node n);
+  void jjtSetParent(Node n);
 
-  public Node jjtGetParent();
+  Node jjtGetParent();
 
   /**
    * This method tells the node to add its argument to the node's
    * list of children.
    */
-  public void jjtAddChild(Node n, int i);
+  void jjtAddChild(Node n, int i);
 
   /**
    * This method returns a child node.  The children are numbered
    * from zero, left to right.
    */
-  public Node jjtGetChild(int i);
+  Node jjtGetChild(int i);
 
   /**
    * Return the number of children the node has.
    */
-  public int jjtGetNumChildren();
+  int jjtGetNumChildren();
 #if VISITOR
 
   /**
    * Accept the visitor.
    */
 #if VISITOR_EXCEPTION
-  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) throws ${VISITOR_EXCEPTION};
+  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) throws ${VISITOR_EXCEPTION};
 #else
-  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data);
+  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data);
 #fi
 #fi
 }
