--- a/javacc-example-jjtree/pom.xml
+++ b/javacc-example-jjtree/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>javacc-parent</artifactId>
     <groupId>net.java.dev.javacc</groupId>
+    <artifactId>javacc-parent</artifactId>
     <version>5.1</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>example-jjtree</artifactId>
+  <artifactId>javacc-example-jjtree</artifactId>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
