--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>javacc-example-java</module>
     <module>javacc-example-jjtree</module>
     <module>javacc-example-corba-idl</module>
+    <module>javacc-example-interpreter</module>
     <!--<module>javacc-maven-plugin</module>-->
   </modules>
   <name>JavaCC</name>
