--- a/javacc/src/main/resources/templates/Node.template
+++ b/javacc/src/main/resources/templates/Node.template
@@ -2,10 +2,7 @@
    machinery for constructing the parent and child relationships
    between nodes. */
 
-#if SUPPORT_CLASS_VISIBILITY_PUBLIC
-public
-#fi
-interface Node {
+public interface Node {
   /**
    * This method is called after the node has been made the current
    * node.  It indicates that child nodes can now be added to it.
