--- a/javacc/src/main/resources/templates/SimpleCharStream.template
+++ b/javacc/src/main/resources/templates/SimpleCharStream.template
@@ -2,7 +2,7 @@
  * An implementation of interface CharStream, where the stream is assumed to
  * contain only ASCII characters (without unicode processing).
  */
-${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}final class SimpleCharStream implements CharStream {
+public final class SimpleCharStream implements CharStream {
   /** Reader that provides characters. */
   private final java.io.Reader reader;
   /** Buffer contains character of the token currently being read. */
