--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -1,10 +1,7 @@
-#if SUPPORT_CLASS_VISIBILITY_PUBLIC
-public
-#fi
 #if NODE_EXTENDS
-class SimpleNode extends ${NODE_EXTENDS} implements Node {
+public class SimpleNode extends ${NODE_EXTENDS} implements Node {
 #else
-class SimpleNode implements Node {
+public class SimpleNode implements Node {
 #fi
   protected Node parent;
   protected Node[] children;
