--- a/javacc/src/main/resources/templates/TokenManager.template
+++ b/javacc/src/main/resources/templates/TokenManager.template
@@ -3,7 +3,7 @@
  * JavaCCParser.  The user is free to use any implementation
  * of their choice.
  */
-${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface TokenManager {
+public interface TokenManager {
   /**
    * Gets the next token from the input stream.
    * A token of kind 0 (&lt;EOF&gt;) should be returned on EOF.
