--- a/javacc/src/main/resources/templates/Node.template
+++ b/javacc/src/main/resources/templates/Node.template
@@ -1,7 +1,8 @@
-/* All AST nodes must implement this interface.  It provides basic
-   machinery for constructing the parent and child relationships
-   between nodes. */
-
+/**
+ * All AST nodes must implement this interface.  It provides basic
+ * machinery for constructing the parent and child relationships
+ * between nodes.
+ */
 public interface Node {
   /**
    * This method is called after the node has been made the current
@@ -40,7 +41,8 @@ public interface Node {
    * Accept the visitor.
    */
 #if VISITOR_EXCEPTION
-  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) throws ${VISITOR_EXCEPTION};
+  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+    throws ${VISITOR_EXCEPTION};
 #else
   ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data);
 #fi
