--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -13,12 +13,12 @@ public class SimpleNode implements Node {
   protected Token lastToken;
 #fi
 
-  public SimpleNode(int i) {
-    id = i;
+  public SimpleNode(int id) {
+    this.id = id;
   }
 
-  public SimpleNode(${PARSER_NAME} p, int i) {
-    this(i);
+  public SimpleNode(${PARSER_NAME} p, int id) {
+    this(id);
     parser = p;
   }
 
@@ -49,7 +49,7 @@ public class SimpleNode implements Node {
       children = new Node[i + 1];
     }
     else if (i >= children.length) {
-      Node c[] = new Node[i + 1];
+      Node[] c = new Node[i + 1];
       System.arraycopy(children, 0, c, 0, children.length);
       children = c;
     }
@@ -92,11 +92,12 @@ public class SimpleNode implements Node {
 #fi
 #if VISITOR
   /** Accept the visitor. **/
-  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
 #if VISITOR_EXCEPTION
-     throws ${VISITOR_EXCEPTION}
+  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+      throws ${VISITOR_EXCEPTION} {
+#else
+  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) {
 #fi
-{
 #if VISITOR_RETURN_TYPE_VOID
     visitor.visit(this, data);
 #else
@@ -105,14 +106,15 @@ public class SimpleNode implements Node {
   }
 
   /** Accept the visitor. **/
-  public Object childrenAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
 #if VISITOR_EXCEPTION
-     throws ${VISITOR_EXCEPTION}
+  public Object childrenAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+      throws ${VISITOR_EXCEPTION} {
+#else
+  public Object childrenAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) {
 #fi
-{
     if (children != null) {
-      for (int i = 0; i < children.length; ++i) {
-        children[i].jjtAccept(visitor, data);
+      for (Node child : children) {
+        child.jjtAccept(visitor, data);
       }
     }
     return data;
@@ -134,8 +136,8 @@ public class SimpleNode implements Node {
   public void dump(String prefix) {
     System.out.println(toString(prefix));
     if (children != null) {
-      for (int i = 0; i < children.length; ++i) {
-        SimpleNode n = (SimpleNode)children[i];
+      for (Node child : children) {
+        SimpleNode n = (SimpleNode) child;
         if (n != null) {
           n.dump(prefix + " ");
         }
