--- a/javacc/src/main/resources/templates/Node.template
+++ b/javacc/src/main/resources/templates/Node.template
@@ -37,14 +37,11 @@ public interface Node {
   int jjtGetNumChildren();
 #if VISITOR
 
-  /**
-   * Accept the visitor.
-   */
 #if VISITOR_EXCEPTION
-  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+  ${VISITOR_RETURN_TYPE} jjtAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data)
     throws ${VISITOR_EXCEPTION};
 #else
-  ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data);
+  ${VISITOR_RETURN_TYPE} jjtAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data);
 #fi
 #fi
 }
