--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -3,11 +3,13 @@ public class SimpleNode extends ${NODE_EXTENDS} implements Node {
 #else
 public class SimpleNode implements Node {
 #fi
+#if NODE_USES_PARSER
+  protected ${PARSER_NAME} parser;
+#fi
   protected Node parent;
   protected Node[] children;
   protected int id;
   protected Object value;
-  protected ${PARSER_NAME} parser;
 #if TRACK_TOKENS
   protected Token firstToken;
   protected Token lastToken;
@@ -16,22 +18,26 @@ public class SimpleNode implements Node {
   public SimpleNode(int id) {
     this.id = id;
   }
+#if NODE_USES_PARSER
 
   public SimpleNode(${PARSER_NAME} p, int id) {
     this(id);
     parser = p;
   }
-
+#fi
 #if NODE_FACTORY
+
   public static Node jjtCreate(int id) {
     return new SimpleNode(id);
   }
 
+#if NODE_USES_PARSER
   public static Node jjtCreate(${PARSER_NAME} p, int id) {
     return new SimpleNode(p, id);
   }
-
 #fi
+#fi
+
   public void jjtOpen() {}
 
   public void jjtClose() {}
@@ -71,8 +77,8 @@ public class SimpleNode implements Node {
   public Object jjtGetValue() {
     return value;
   }
-
 #if TRACK_TOKENS
+
   public Token jjtGetFirstToken() {
     return firstToken;
   }
@@ -88,15 +94,14 @@ public class SimpleNode implements Node {
   public void jjtSetLastToken(Token token) {
     this.lastToken = token;
   }
-
 #fi
 #if VISITOR
-  /** Accept the visitor. **/
+
 #if VISITOR_EXCEPTION
-  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+  public ${VISITOR_RETURN_TYPE} jjtAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data)
       throws ${VISITOR_EXCEPTION} {
 #else
-  public ${VISITOR_RETURN_TYPE} jjtAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) {
+  public ${VISITOR_RETURN_TYPE} jjtAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data) {
 #fi
 #if VISITOR_RETURN_TYPE_VOID
     visitor.visit(this, data);
@@ -105,12 +110,11 @@ public class SimpleNode implements Node {
 #fi
   }
 
-  /** Accept the visitor. **/
 #if VISITOR_EXCEPTION
-  public Object childrenAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data)
+  public Object childrenAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data)
       throws ${VISITOR_EXCEPTION} {
 #else
-  public Object childrenAccept(${PARSER_NAME}Visitor visitor, ${VISITOR_DATA_TYPE:-Object} data) {
+  public Object childrenAccept(${VISITOR_TYPE} visitor, ${VISITOR_DATA_TYPE:-Object} data) {
 #fi
     if (children != null) {
       for (Node child : children) {
@@ -119,27 +123,21 @@ public class SimpleNode implements Node {
     }
     return data;
   }
-
 #fi
-  /* You can override these two methods in subclasses of SimpleNode to
-     customize the way the node appears when the tree is dumped.  If
-     your output uses more than one line you should override
-     toString(String), otherwise overriding toString() is probably all
-     you need to do. */
 
-  public String toString() { return ${PARSER_NAME}TreeConstants.jjtNodeName[id]; }
+  public String toString() {
+    return ${TREE_CONSTANTS_TYPE}.jjtNodeName[id];
+  }
 
-  public String toString(String prefix) { return prefix + toString(); }
-
-  /* Override this method if you want to customize how the node dumps
-     out its children. */
   public void dump(String prefix) {
-    System.out.println(toString(prefix));
+    System.out.print(prefix);
+    System.out.print(toString());
+    System.out.println();
     if (children != null) {
       for (Node child : children) {
         SimpleNode n = (SimpleNode) child;
         if (n != null) {
-          n.dump(prefix + " ");
+          n.dump(prefix + "  ");
         }
       }
     }
