--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modules>
     <module>javacc</module>
     <module>javacc-examples</module>
-    <!--<module>javacc-maven-plugin</module>-->
+    <module>javacc-maven-plugin</module>
   </modules>
   <name>JavaCC</name>
   <description>
@@ -217,4 +217,3 @@
     </pluginManagement>
   </build>
 </project>
-
