--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -50,7 +50,7 @@ public class SimpleNode implements Node {
     return parent;
   }
 
-  public void jjtAddChild(Node n, int i) {
+  public void jjtSetChild(Node n, int i) {
     if (children == null) {
       children = new Node[i + 1];
     }
@@ -66,7 +66,7 @@ public class SimpleNode implements Node {
     return children[i];
   }
 
-  public int jjtGetNumChildren() {
+  public int jjtGetChildCount() {
     return children == null ? 0 : children.length;
   }
 
