--- a/javacc-examples/javacc-example-corba-idl/pom.xml
+++ b/javacc-examples/javacc-example-corba-idl/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>net.java.dev.javacc</groupId>
-    <artifactId>javacc-parent</artifactId>
+    <artifactId>javacc-examples</artifactId>
     <version>5.1</version>
   </parent>
   <artifactId>javacc-example-corba-idl</artifactId>
