--- a/javacc/src/main/resources/templates/SimpleNode.template
+++ b/javacc/src/main/resources/templates/SimpleNode.template
@@ -83,16 +83,13 @@ public class SimpleNode implements Node {
     return firstToken;
   }
 
-  public void jjtSetFirstToken(Token token) {
-    this.firstToken = token;
-  }
-
   public Token jjtGetLastToken() {
     return lastToken;
   }
 
-  public void jjtSetLastToken(Token token) {
-    this.lastToken = token;
+  public void jjtSetTokens(Token firstToken, Token lastToken) {
+    this.firstToken = firstToken;
+    this.lastToken = lastToken;
   }
 #fi
 #if VISITOR
